--- a/src/app/user-pages/register/register.component.html
+++ b/src/app/user-pages/register/register.component.html
@@ -2,17 +2,26 @@
   <div class="row w-100 mx-0">
     <div class="col-lg-4 mx-auto">
       <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-        <div class="brand-logo">
+        <!-- <div class="brand-logo">
           <img src="assets/images/logo.svg" alt="logo">
-        </div>
+        </div> -->
         <h4>New here?</h4>
         <h6 class="font-weight-light">Signing up is easy. It only takes a few steps</h6>
-        <form class="pt-3">
+        <form class="pt-3"[formGroup]="registerForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Username">
           </div>
           <div class="form-group">
             <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control form-control-lg" id="exampleInputFirstName" placeholder="First-Name">
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control form-control-lg" id="exampleInputLastName" placeholder="Lasr-Name">
+          </div>
+          <div class="form-group">
+            <input type="number" class="form-control form-control-lg" id="exampleInputMobile" placeholder="Mobile">
           </div>
           <div class="form-group">
             <select class="form-control form-control-lg" id="exampleFormControlSelect2">
@@ -24,10 +33,22 @@
               <option>Argentina</option>
             </select>
           </div>
+          <div class="form-group"> 
+            <input type="text" class="form-control form-control-lg" id="exampleInputState" placeholder="State">
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control form-control-lg" id="exampleInputCity" placeholder="City">
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control form-control-lg" id="exampleInputAddress" placeholder="Address">
+          </div>
+          <div class="form-group">
+            <input type="number" class="form-control form-control-lg" id="exampleInputZip" placeholder="zip">
+          </div>
           <div class="form-group">
             <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
           </div>
-          <div class="mb-4">
+          <!-- <div class="mb-4">
             <div class="form-check">
               <label class="form-check-label text-muted">
                 <input type="checkbox" class="form-check-input">
@@ -35,7 +56,7 @@
                 I agree to all Terms & Conditions
               </label>
             </div>
-          </div>
+          </div> -->
           <div class="mt-3">
             <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" routerLink="/dashboard">SIGN UP</a>
           </div>
