--- a/src/app/user-pages/register/register.component.html
+++ b/src/app/user-pages/register/register.component.html
@@ -9,22 +9,22 @@
         <h6 class="font-weight-light">Signing up is easy. It only takes a few steps</h6>
         <form class="pt-3"[formGroup]="registerForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
-            <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Username">
+            <input type="text" class="form-control form-control-lg" formControlName="userName"class="form-control"id="exampleInputUsername1" placeholder="Username">
           </div>
           <div class="form-group">
-            <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email">
+            <input type="email" class="form-control form-control-lg"formControlName="email" class="form-control"id="exampleInputEmail1" placeholder="Email">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control form-control-lg" id="exampleInputFirstName" placeholder="First-Name">
+            <input type="text" class="form-control form-control-lg"formControlName="firstName"class="form-control" id="exampleInputFirstName" placeholder="First-Name">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control form-control-lg" id="exampleInputLastName" placeholder="Lasr-Name">
+            <input type="text" class="form-control form-control-lg" formControlName="lastName"class="form-control"id="exampleInputLastName" placeholder="Lasr-Name">
           </div>
           <div class="form-group">
-            <input type="number" class="form-control form-control-lg" id="exampleInputMobile" placeholder="Mobile">
+            <input type="number" class="form-control form-control-lg" formControlName="mobile"class="form-control"id="exampleInputMobile" placeholder="Mobile">
           </div>
           <div class="form-group">
-            <select class="form-control form-control-lg" id="exampleFormControlSelect2">
+            <select class="form-control form-control-lg"formControlName="country"class="form-control" id="exampleFormControlSelect2">
               <option>Country</option>
               <option>United States of America</option>
               <option>United Kingdom</option>
@@ -34,19 +34,19 @@
             </select>
           </div>
           <div class="form-group"> 
-            <input type="text" class="form-control form-control-lg" id="exampleInputState" placeholder="State">
+            <input type="text" class="form-control form-control-lg" formControlName="state"class="form-control"id="exampleInputState" placeholder="State">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control form-control-lg" id="exampleInputCity" placeholder="City">
+            <input type="text" class="form-control form-control-lg" formControlName="city"class="form-control"id="exampleInputCity" placeholder="City">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control form-control-lg" id="exampleInputAddress" placeholder="Address">
+            <input type="text" class="form-control form-control-lg" formControlName="address"class="form-control"id="exampleInputAddress" placeholder="Address">
           </div>
           <div class="form-group">
-            <input type="number" class="form-control form-control-lg" id="exampleInputZip" placeholder="zip">
+            <input type="number" class="form-control form-control-lg"formControlName="zip" class="form-control"id="exampleInputZip" placeholder="zip">
           </div>
           <div class="form-group">
-            <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
+            <input type="password" class="form-control form-control-lg"formControlName="password" class="form-control"id="exampleInputPassword1" placeholder="Password">
           </div>
           <!-- <div class="mb-4">
             <div class="form-check">
@@ -58,7 +58,7 @@
             </div>
           </div> -->
           <div class="mt-3">
-            <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" routerLink="/dashboard">SIGN UP</a>
+            <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" routerLink="/login"type="submit">SIGN UP</a>
           </div>
           <div class="text-center mt-4 font-weight-light">
             Already have an account? <a routerLink="/login" class="text-primary">Login</a>
